--- a/Users.html
+++ b/Users.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" defer></script>
+    <link rel="stylesheet" href="styles1.css">
+    <script src="usrscripts.js" defer></script>
 </head>
 <body>
     <div class="sidebar">
@@ -14,7 +14,7 @@
         <a href="#">Users</a>
         <a href="#" id="lgnav">Logout</a>
     </div>
-    <div class="container">
+    <div class="main">
         <h2>Users</h2>
         <a href="register.html"><button id="AddUserBtn">+ Add User</button></a>
     </div>
