added css to change in future

--- a/Users.html
+++ b/Users.html
@@ -8,6 +8,10 @@
     <script src="usrscripts.js" defer></script>
 </head>
 <body>
+    <header class ="Title">
+        <img src="dolphin.png" alt="Dolphin Logo" class="logo">
+        Dolphin CRM
+    </header>
     <div class="sidebar">
         <a href="#">Home</a>
         <a href="#">New Contact</a>
