Formatting and databasr functionality for user table lookup

--- a/Users.html
+++ b/Users.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Users</title>
     <link rel="stylesheet" href="styles1.css">
     <script src="usrscripts.js" defer></script>
 </head>
@@ -12,18 +12,20 @@
         <img src="dolphin.png" alt="Dolphin Logo" class="logo">
         Dolphin CRM
     </header>
-    <div class="sidebar">
-        <a href="#">Home</a>
-        <a href="#">New Contact</a>
-        <a href="#">Users</a>
-        <a href="#" id="lgnav">Logout</a>
-    </div>
-    <div class="main">
-        <h2>Users</h2>
-        <a href="register.html"><button id="AddUserBtn">+ Add User</button></a>
-    </div>
-    <div id="userList">
-    
-    </div>
+    <main>
+        <div class="sidebar">
+            <a href="dashboard.html">Home</a>
+            <a href="register.html">New Contact</a>
+            <a href="Users.html">Users</a>
+            <a href="index.html" id="lgnav"><img id = 'logout'src="logout.png" alt="logout door">Logout</a>
+        </div>
+        <div class="main">
+            <h2>Users</h2>
+            <a href="register.html"><button id="AddUserBtn">+ Add User</button></a>
+        </div>
+        <div id="userList">
+        
+        </div>
+    </main>
 </body>
 </html>
