adjusting margins for button and table

--- a/Users.html
+++ b/Users.html
@@ -22,10 +22,11 @@
         <div class="main">
             <h2>Users</h2>
             <a href="register.html"><button id="AddUserBtn">+ Add User</button></a>
+            <div id="userList">
+                <!-- User list will be made here -->
+            </div>
         </div>
-        <div id="userList">
         
-        </div>
     </main>
 </body>
 </html>
