Changes to add user

--- a/register.html
+++ b/register.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New User</title>
-
     <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
 
-    <!-- TOP BAR -->
+    <!-- HEADER -->
     <header class="Title">
         <img src="dolphin.png" alt="Dolphin Logo" class="logo">
         Dolphin CRM
     </header>
 
+    <!-- MAIN LAYOUT -->
     <main>
-
-        <!-- LEFT SIDEBAR -->
+        <!-- SIDEBAR -->
         <div class="sidebar">
             <a href="dashboard.html">Home</a>
             <a href="newcontact.html">New Contact</a>
@@ -27,49 +26,52 @@
             </a>
         </div>
 
-        <!-- MAIN CONTENT -->
+        <!-- CONTENT -->
         <div class="content">
-
-            <h2>New User</h2>
-
-            <!-- USER FORM -->
             <form id="addUserForm" action="add_user.php" method="POST" class="user-form">
 
-                <div class="form-row">
-                    <label>First Name</label>
-                    <input type="text" name="firstname" required>
+                <h2 style="margin-bottom: 20px;">New User</h2>
+
+                <!-- TWO-COLUMN FORM -->
+                <div class="form-container">
+                    <!-- COLUMN 1 -->
+                    <div class="form-column">
+                        <div class="form-field">
+                            <label>First Name</label>
+                            <input type="text" name="firstname" required>
+                        </div>
+
+                        <div class="form-field">
+                            <label>Email</label>
+                            <input type="email" name="email" required>
+                        </div>
+
+                        <div class="form-field">
+                            <label>Role</label>
+                            <select name="role" required>
+                                <option value="Member">Member</option>
+                                <option value="Admin">Admin</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <!-- COLUMN 2 -->
+                    <div class="form-column">
+                        <div class="form-field">
+                            <label>Last Name</label>
+                            <input type="text" name="lastname" required>
+                        </div>
+
+                        <div class="form-field">
+                            <label>Password</label>
+                            <input type="password" name="password" required>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="form-row">
-                    <label>Last Name</label>
-                    <input type="text" name="lastname" required>
-                </div>
-
-                <div class="form-row">
-                    <label>Email</label>
-                    <input type="email" name="email" required>
-                </div>
-
-                <div class="form-row">
-                    <label>Password</label>
-                    <input type="password" name="password" required>
-                </div>
-
-                <div class="form-row">
-                    <label>Role</label>
-                    <select name="role" required>
-                        <option value="Member">Member</option>
-                        <option value="Admin">Admin</option>
-                    </select>
-                </div>
-
-                <!-- Save button at bottom-right -->
-                <div class="form-row">
-                    <button class="save-btn" type="submit">Save</button>
-                </div>
-
+                <!-- SAVE BUTTON -->
+                <button class="save-btn" type="submit">Save</button>
             </form>
-
         </div>
     </main>
 
