--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New User</title>
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="registerstyles.css">
 </head>
 <body>
 
@@ -30,7 +30,7 @@
         <div class="content">
             <form id="addUserForm" action="add_user.php" method="POST" class="user-form">
 
-                <h2 style="margin-bottom: 20px;">New User</h2>
+                <h2>New User</h2>
 
                 <!-- TWO-COLUMN FORM -->
                 <div class="form-container">
@@ -38,12 +38,12 @@
                     <div class="form-column">
                         <div class="form-field">
                             <label>First Name</label>
-                            <input type="text" name="firstname" required>
+                            <input type="text" name="firstname" placeholder="Enter first name" required>
                         </div>
 
                         <div class="form-field">
                             <label>Email</label>
-                            <input type="email" name="email" required>
+                            <input type="email" name="email" placeholder="Enter email" required>
                         </div>
 
                         <div class="form-field">
@@ -59,18 +59,17 @@
                     <div class="form-column">
                         <div class="form-field">
                             <label>Last Name</label>
-                            <input type="text" name="lastname" required>
+                            <input type="text" name="lastname" placeholder="Enter last name" required>
                         </div>
 
                         <div class="form-field">
                             <label>Password</label>
-                            <input type="password" name="password" required>
+                            <input type="password" name="password" placeholder="Enter password" required>
                         </div>
                     </div>
                 </div>
 
-                <!-- SAVE BUTTON -->
-                <button class="save-btn" type="submit">Save</button>
+                <button type="submit" class="save-btn">Save</button>
             </form>
         </div>
     </main>
